--- a/resources/assets/styles/variables.scss
+++ b/resources/assets/styles/variables.scss
@@ -82,6 +82,7 @@ $theme-colors: map-merge((
   "primary":    $primary,
   "secondary":  $secondary,
   "info":       $info,
+  "accent":     $accent,
   "success":    $success,
   "warning":    $warning,
   "danger":     $danger,
