--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -1,26 +1,29 @@
 // Full page Layout
 html {
     height: 100%;
-    
-    // Button overrides
-    .btn {
-        text-transform: uppercase;
-        font-size: .9em;
-        font-weight: $font-weight-bold;
-        
-        &.btn-lg {
-            border-width: 2px;
-        }
-    }
 
     * {
         text-rendering: unset;
+    }
+
+    .full-height {
+        height: 100%;
+    }
+
+    .rounded {
+        border-radius: 2rem !important;
+    }
+    .round {
+        border-radius: 50%;
+    }
+
+    input:focus {
+        box-shadow: none !important;
     }
 }
 
 body {
     height: 100%;
-    font-size: 14px;
 
     #app {
         height: auto !important;
@@ -33,32 +36,52 @@ body {
             
             main {
                 flex-grow: 1;
-
-                &.contact {
-                    background-color: $black;
-
-                    iframe {
-                        height: 100%;
-                        min-height: 350px;
-                        flex-grow: 1;
-
-                        @media (min-width: 1200px){
-                            min-height: 420px;
-                        }
-
-                        @media (min-width: 2200px){
-                            min-height: 500px;
-                        }
-
-                        @media (min-width: 2600px){
-                            min-height: 650px;
-                        }
-                    }
-                }
             }
             
             &.full-height {
                 height: 100vh;
+            }
+
+            &.text-large {
+                .sizable, .button-gallery.sizeable {
+                    p, h3, h4, h5, h6, li, button, td, a.sizeable, .sizeable-element { font-size: 1.2rem !important; }
+                    h1 { font-size: 2.4rem !important; }
+                    h2 { font-size: 1.5rem !important; }
+                }
+            }
+
+            &.text-larger {
+                .sizable, .button-gallery.sizeable {
+                    p, h3, h4, h5, h6, li, button, td, a.sizeable, .sizeable-element { font-size: 1.5rem !important; }
+                    h1 { font-size: 2.6rem !important; }
+                    h2 { font-size: 1.75rem !important; }
+                }
+
+                .container {
+                    @media (min-width: 1200px){
+                        max-width: 1200px;
+                    }
+                    @media (min-width: 1400px){
+                        max-width: 1400px;
+                    }
+                    @media (min-width: 1900px){
+                        max-width: 1900px;
+                    }
+                }
+            }
+
+            &.text-largest {
+                .sizable, .button-gallery.sizeable {
+                    p, h3, h4, h5, h6, li, button, td, a.sizeable, .sizeable-element { font-size: 2rem !important; }
+                    h1 { font-size: 2.8rem !important; }
+                    h2 { font-size: 2.5rem !important; }
+                }
+
+                .container {
+                    @media (min-width: 1200px){
+                        max-width: 100%;
+                    }
+                }
             }
         }
 
@@ -78,21 +101,43 @@ body {
         height: 100px;
     }
 
-    .btn {
-        font-weight: $font-weight-bolder;
-        letter-spacing: 2px;
-        font-size: 20px;
+    a.logo {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        padding: .75rem;
+
+        img {
+            width: 200px;
+
+            @media (min-width: 768px) {
+                width: auto;
+            }
+        }
+    }
+
+    button.mobile-toggle {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        padding: .5rem .5rem .5rem .75rem;
+        justify-content: flex-end;
+
+        .fa {
+            padding: 0 .5rem;
+        }
     }
 
     .topnav {
         height: 100%;
+        padding: 0;
 
-        a.nav-link {
+        .nav-link {
             color: #FFF;
             padding: 1.5rem .75rem;
 
             &:hover {
-                color: $primary;
+                color: $accent;
             }
         }
         .dropdown-menu {
@@ -104,7 +149,7 @@ body {
             background-color: $dark;
             width: 230px;
 
-            a.dropdown-item {
+            .dropdown-item {
                 color: #FFF;
                 background-color: transparent;
                 padding: 1rem;
@@ -127,6 +172,28 @@ body {
     }
 }
 
+//Text Sizer
+.text-sizer-section {
+    z-index: 2;
+    .text-sizer {
+        background-color: rgba(99,117,42,.8);
+
+        button {
+            padding: 0;
+            height: 30px;
+            width: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            &.reset-button {
+                font-family: 'Montserrat';
+                font-weight: 400;
+                font-size: 10px;
+            }
+        }
+    }
+}
 
 // Navigation
 ul.navbar-nav {
@@ -140,7 +207,6 @@ ul.navbar-nav {
             text-transform: uppercase;
             text-decoration: none;
             font-weight: 600;
-            font-size: 13px;
             transition: all .5s linear;
         }
     }
@@ -166,104 +232,79 @@ ul.navbar-nav {
     }
 }
 
+// Support Header
+.header-image {
+    background-image: url('/themes/wordplate/assets/images/support-header.jpg');
+    background-position: center;
+    background-size: cover;
+    min-height: 100px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 // Body Content
 main {
     position: relative;
     background: transparent;
-    box-shadow: 0 0 10px rgba(0,0,0,.3);
-    
 
-    @media (min-width: 992px){
-        box-shadow: none;
+    .breadcrumbs {
+        font-size: .8em;
+        padding: .5rem 0;
     }
 
     article {
         padding: 2rem 1rem 1rem;
         text-align: left;
-        background-color: #FFF;
-
-        @media (min-width: 576px){
-            text-align: justify;
-        }
 
         header {
-            margin-bottom: 1rem;
+            margin-bottom: .25rem;
         }
 
-        .fittext span, h1 {
+        h1 {
             color: $primary;
-            text-transform: uppercase;
-            font-weight: $font-weight-bolder;
-            letter-spacing: 2px;
-        }
-
-        p, ul, ol {
-            line-height: 1.8em;
+            font-weight: $display1-weight;
+            line-height: 1.6rem;
+            padding-bottom: 2rem;
         }
 
         h2 {
-            margin-top: 3rem;
-            margin-bottom: 1rem;
             color: $secondary;
-            font-weight: 400;
-            text-transform: capitalize;
-            
-            &::after {
-                content: none;
-                background-color: $secondary;
+            font-weight: $display2-weight;
+        }
+
+        h3 {
+            font-weight: $display3-weight;
+        }
+
+    }
+
+    .sidebar {
+        padding-top: 2rem;
+
+        .sidebar-header {
+            color: $secondary;
+            font-size: $h2-font-size;
+            background-color: #efefef;
+            margin: 0;
+            padding: 1rem 1.25rem;
+        }
+
+        .list-group-item {
+            background-color: #efefef;
+            border-bottom: 1px solid #fff !important;
+
+            &.active {
+                color: $primary;
+                font-weight: $font-weight-bold;
             }
         }
-    }
-}
 
-// Support Content
-.header-image {
-    background-size: cover;
-    background-position: center;
-    min-height: 150px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-
-    h1, h2 {
-        display: inline-block;
-        padding: .75rem 1rem;
-        border: 1px solid #FFF;
-        height: 60px;
-        margin: 0;
-        line-height: 1em;
-        font-size: 2.3em;
-        text-shadow: 0 0 15px rgba(0,0,0,.4);
-        box-shadow: 0 0 15px rgba(0,0,0,.2);
-        letter-spacing: 1px;
-    }
-
-    &.support {
-        padding: 3rem 1rem;
-        background-color: $dark;
-        position: relative;
-        overflow: hidden;
-        z-index: 1;
-
-        &::before {
-            content: " ";
-            position: absolute;
-            display: block;
-            background-color: rgba(0,0,0,.5);
-            top: 0;
-            right: 0;
-            left: 0;
-            bottom: 0;
-            z-index: 1;
-        }
-        
-        .container {
-            display: flex;
-            height:100%;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            z-index: 2;
+        .child-page {
+            background-color: #efefef;
+            padding-left: 1.75rem;
+            font-size: .9em;
+            border-bottom: 1px solid #fff !important;
         }
     }
 }
@@ -403,7 +444,6 @@ footer {
         margin: 0 -.25rem;
         
         svg {
-
             path: {
                 fill: transparent !important;
                 stroke: #FFF !important;
@@ -411,6 +451,7 @@ footer {
             }
         }
     }
+
     .copyright {
         font-size: 12px;
         margin: 0;
