--- a/public/themes/wordplate/assets/styles/app.css
+++ b/public/themes/wordplate/assets/styles/app.css
@@ -2499,7 +2499,7 @@ ul ol {
 }
 
 dt {
-  font-weight: 700;
+  font-weight: 600;
 }
 
 dd {
@@ -2924,7 +2924,7 @@ kbd {
 kbd kbd {
   padding: 0;
   font-size: 100%;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 pre {
@@ -7577,7 +7577,7 @@ input[type="button"].btn-block {
   display: inline-block;
   padding: 0.25em 0.4em;
   font-size: 75%;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 1;
   text-align: center;
   white-space: nowrap;
@@ -7745,7 +7745,7 @@ input[type="button"].btn-block {
 }
 
 .alert-link {
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .alert-dismissible {
@@ -8247,7 +8247,7 @@ input[type="button"].btn-block {
 .close {
   float: right;
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 1;
   color: #000;
   text-shadow: 0 1px 0 #fff;
@@ -11870,7 +11870,7 @@ button.bg-black:focus {
 }
 
 .font-weight-bold {
-  font-weight: 700 !important;
+  font-weight: 600 !important;
 }
 
 .font-italic {
@@ -12200,6 +12200,10 @@ html .full-height {
   height: 100%;
 }
 
+html .full-width {
+  width: 100% !important;
+}
+
 html .rounded {
   border-radius: 2rem !important;
 }
@@ -12485,22 +12489,55 @@ ul.navbar-nav li a {
   transition: all .5s linear;
 }
 
-.mobile-menu-open .top,
 .scrolling .top {
-  background-color: #FFF;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
 }
 
-.mobile-menu-open .top .topnav,
-.scrolling .top .topnav {
-  list-style: none;
-  display: flex;
+.mobile-menu.open {
+  background-color: #63752a;
 }
 
-.mobile-menu-open .top .topnav li a.nav-link,
-.scrolling .top .topnav li a.nav-link {
-  color: #555;
-  padding: .75rem .75rem;
+.search-form {
+  width: 250px;
+}
+
+@media (min-width: 768px) {
+  .search-form {
+    width: 450px;
+  }
+}
+
+.search-form .search-field {
+  font-size: .8rem;
+  padding: .25rem .5rem;
+  height: calc(2.2rem + 2px);
+}
+
+@media (min-width: 768px) {
+  .search-form .search-field {
+    font-size: 1.1rem;
+    padding: .5rem 1rem;
+    height: calc(3rem + 2px);
+  }
+}
+
+.search-form .search-button {
+  padding: 0;
+  margin: .25rem;
+  font-size: 1.1rem;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .search-form .search-button {
+    font-size: 1.3rem;
+    height: 42px;
+    width: 42px;
+  }
 }
 
 .header-image {
@@ -12567,7 +12604,7 @@ main .sidebar .list-group-item {
 
 main .sidebar .list-group-item.active {
   color: #076974;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 main .sidebar .child-page {
@@ -12577,32 +12614,37 @@ main .sidebar .child-page {
   border-bottom: 1px solid #fff !important;
 }
 
+.welcome,
 .slider-container {
   position: relative;
-  height: 100px;
+  height: 163px;
   overflow: hidden;
   z-index: 0;
 }
 
 @media (min-width: 576px) {
+  .welcome,
   .slider-container {
-    height: 200px;
+    height: 240px;
   }
 }
 
 @media (min-width: 768px) {
+  .welcome,
   .slider-container {
-    height: 300px;
+    height: 360px;
   }
 }
 
 @media (min-width: 992px) {
+  .welcome,
   .slider-container {
     height: 420px;
   }
 }
 
 @media (min-width: 1200px) {
+  .welcome,
   .slider-container {
     height: 540px;
   }
@@ -12623,6 +12665,33 @@ article h2::after,
   margin: 5px 0;
 }
 
+.welcome {
+  width: 100%;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 60px;
+  text-shadow: 0 0 13px rgba(0, 0, 0, 0.7);
+}
+
+@media (min-width: 768px) {
+  .welcome {
+    top: 100px;
+  }
+}
+
+.welcome p.biggest {
+  font-size: 35px;
+  font-weight: 800;
+}
+
+@media (min-width: 768px) {
+  .welcome p.biggest {
+    font-size: 50px;
+  }
+}
+
 .button-gallery .box-button {
   font-size: 18px;
 }
@@ -12631,25 +12700,20 @@ article h2::after,
   color: #FFF;
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: 400;
-  line-height: 1em;
+  font-weight: 600;
+  line-height: 1.3em;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   font-size: inherit;
 }
 
 @media (min-width: 768px) {
   .button-gallery .box-button a {
-    height: 184px;
+    height: 165px;
   }
 }
 
 .button-gallery .box-button a span {
   font-size: inherit;
-}
-
-.button-gallery .box-button a small {
-  font-weight: 400;
-  font-size: 67%;
 }
 
 .button-gallery .box-button a img {
@@ -12658,41 +12722,26 @@ article h2::after,
 
 @media (min-width: 768px) {
   .button-gallery .box-button a img {
-    width: 87px;
+    width: 97px;
     margin-bottom: 10px;
+    margin-top: -75px;
   }
 }
 
-.button-gallery .box-button.records-search a {
-  background-color: #6f42c1;
+.button-gallery .box-button.commissioner a {
+  background-color: #644728;
 }
 
-.button-gallery .box-button.tax-deeds a {
-  background-color: #076974;
-}
-
-.button-gallery .box-button.foreclosures a {
-  background-color: #63752a;
-}
-
-.button-gallery .box-button.forms a {
-  background-color: #007bff;
-}
-
-.button-gallery .box-button.e-file a {
+.button-gallery .box-button.employment a {
   background-color: #25444f;
 }
 
-.button-gallery .box-button.pay-online a {
-  background-color: #28a745;
-}
-
-.button-gallery .box-button.marriage a {
+.button-gallery .box-button.clerk a {
   background-color: #076974;
 }
 
-.button-gallery .box-button.passports a {
-  background-color: #644728;
+.button-gallery .box-button.chamber a {
+  background-color: #63752a;
 }
 
 .team-grid {
