--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -10,6 +10,10 @@ html {
         height: 100%;
     }
 
+    .full-width {
+        width: 100% !important;
+    }
+
     .rounded {
         border-radius: 2rem !important;
     }
@@ -212,22 +216,50 @@ ul.navbar-nav {
     }
 }
 
-.mobile-menu-open,
 .scrolling {
     .top {
-        background-color: #FFF;
         box-shadow: 0 0 .5rem rgba(0,0,0,.2);
-                
-        .topnav {
-            list-style: none;
-            display: flex;
+    }
+}
 
-            li {
-                a.nav-link {
-                    color: #555;
-                    padding: .75rem .75rem;
-                }
-            }
+.mobile-menu.open {
+    background-color: $moss;
+}
+
+//Search Form
+.search-form {
+    width: 250px;
+
+    @media (min-width: 768px) {
+        width: 450px;
+    }
+
+    .search-field {
+        font-size: .8rem;
+        padding: .25rem .5rem;
+        height: calc(2.2rem + 2px);
+
+        @media (min-width: 768px) {
+            font-size: 1.1rem;
+            padding: .5rem 1rem;
+            height: calc(3rem + 2px);
+        }
+    }
+
+    .search-button {
+        padding: 0;
+        margin: .25rem;
+        font-size: 1.1rem;
+        height: 30px;
+        width: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @media (min-width: 768px) {
+            font-size: 1.3rem;
+            height: 42px;
+            width: 42px;
         }
     }
 }
@@ -310,18 +342,19 @@ main {
 }
 
 // Main Slider
+.welcome,
 .slider-container {
     position: relative;
-    height: 100px;
+    height: 163px;
     overflow: hidden;
     z-index: 0;
 
     @media (min-width: 576px){
-        height: 200px;
+        height: 240px;
     }
 
     @media (min-width: 768px){
-        height: 300px;
+        height: 360px;
     }
 
     @media (min-width: 992px){
@@ -348,6 +381,29 @@ article h2,
     }
 }
 
+.welcome {
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 60px;
+    text-shadow: 0 0 13px rgba(0,0,0,.7);
+
+    @media (min-width: 768px){
+        top: 100px;
+    }
+
+    p.biggest {
+        font-size: 35px;
+        font-weight: 800;
+
+        @media (min-width: 768px){
+            font-size: 50px;
+        }
+    }
+}
+
 .button-gallery {
     .box-button {
         font-size: 18px;
@@ -356,64 +412,44 @@ article h2,
             color: #FFF;
             text-decoration: none;
             text-transform: uppercase;
-            font-weight: $font-weight-medium;
-            line-height: 1em;
+            font-weight: $font-weight-bold;
+            line-height: 1.3em;
             box-shadow: 0 0 10px rgba(0,0,0, .2);
             font-size: inherit;
             
             @media (min-width:768px){
-                height: 184px;
+                height: 165px;
             }
 
             span {
                 font-size: inherit;
             }
 
-            small {
-                font-weight: $font-weight-normal;
-                font-size: 67%;
-            }
-
             img {
                 width: 68px;
 
                 @media (min-width:768px){
-                    width: 87px;
+                    width: 97px;
                     margin-bottom: 10px;
+                    margin-top: -75px;
                 }
             }
         }
 
-        &.records-search a {
-            background-color: $purple;
+        &.commissioner a {
+            background-color: $brown;
         }
 
-        &.tax-deeds a {
-            background-color: $primary;
-        }
-
-        &.foreclosures a {
-            background-color: $moss;
-        }
-
-        &.forms a {
-            background-color: $blue;
-        }
-
-        &.e-file a {
+        &.employment a {
             background-color: $navy;
         }
 
-        &.pay-online a {
-            background-color: $green;
-        }
-
-        &.marriage a {
+        &.clerk a {
             background-color: $cyan;
         }
 
-        &.passports a {
-            background-color: $brown;
+        &.chamber a {
+            background-color: $moss;
         }
     }
 }
