--- a/resources/assets/styles/variables.scss
+++ b/resources/assets/styles/variables.scss
@@ -40,7 +40,7 @@ $purple:  #6f42c1;
 $pink:    #e83e8c;
 $red:     #dc3545;
 $orange:  #fd7e14;
-$yellow:  #e7b300;
+$yellow:  #ffc600;
 $green:   #28a745;
 $teal:    #20c997;
 $cyan:    #076974;
