--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -139,6 +139,9 @@ body {
         .nav-link {
             color: #FFF;
             padding: 1.5rem .75rem;
+            display: flex;
+            height: 100%;
+            align-items: center;
 
             &:hover {
                 color: $accent;
@@ -147,7 +150,7 @@ body {
         .dropdown-menu {
             border: 0;
             border-top: .5rem solid $secondary;
-            margin-top: -1px;
+            margin-top: -.5rem;
             border-radius: 0;
             padding: 0;
             background-color: $dark;
@@ -159,8 +162,7 @@ body {
                 padding: 1rem;
 
                 &:hover {
-                    color: $primary;
-                    background-color: $dark !important;
+                    color: $accent;
                 }
             }
         }
@@ -212,6 +214,10 @@ ul.navbar-nav {
             text-decoration: none;
             font-weight: 600;
             transition: all .5s linear;
+
+            &:hover {
+                color: $accent;
+            }
         }
     }
 }
@@ -294,7 +300,6 @@ main {
         }
 
         h1 {
-            color: $primary;
             font-weight: $display1-weight;
             line-height: 1.6rem;
             padding-bottom: 2rem;
