--- a/public/themes/wordplate/assets/styles/app.css
+++ b/public/themes/wordplate/assets/styles/app.css
@@ -2755,7 +2755,7 @@ h6,
   margin-bottom: 0.5rem;
   font-family: inherit;
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.5;
   color: inherit;
 }
 
@@ -2796,26 +2796,26 @@ h6,
 
 .display-1 {
   font-size: 6rem;
-  font-weight: 600;
-  line-height: 1.2;
+  font-weight: 800;
+  line-height: 1.5;
 }
 
 .display-2 {
   font-size: 5.5rem;
-  font-weight: 400;
-  line-height: 1.2;
+  font-weight: 600;
+  line-height: 1.5;
 }
 
 .display-3 {
   font-size: 4.5rem;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 .display-4 {
   font-size: 3.5rem;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 hr {
@@ -12216,6 +12216,13 @@ html input:focus {
   box-shadow: none !important;
 }
 
+html .pad-anchor::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  margin-top: -150px;
+}
+
 body {
   height: 100%;
 }
@@ -12430,7 +12437,7 @@ body #app .site-wrapper.text-largest .button-gallery.sizeable h2 {
   border-radius: 0;
   padding: 0;
   background-color: #253217;
-  width: 230px;
+  width: auto;
 }
 
 .top .topnav .dropdown-menu .dropdown-item {
@@ -12576,18 +12583,23 @@ main article header {
 }
 
 main article h1 {
-  font-weight: 600;
+  font-weight: 800;
   line-height: 1.6rem;
   padding-bottom: 2rem;
 }
 
 main article h2 {
   color: #63752a;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 main article h3 {
   font-weight: 400;
+}
+
+main article .business-listings,
+main article .team-grid {
+  padding: 1rem 0;
 }
 
 main .embed-responsive {
@@ -12705,21 +12717,6 @@ main .sidebar .child-page {
   .slider-container {
     height: 540px;
   }
-}
-
-article h2,
-.short-underline {
-  text-transform: uppercase;
-}
-
-article h2::after,
-.short-underline::after {
-  content: " ";
-  display: block;
-  width: 24px;
-  height: 3px;
-  background-color: #FFF;
-  margin: 5px 0;
 }
 
 .welcome {
