--- a/resources/assets/styles/variables.scss
+++ b/resources/assets/styles/variables.scss
@@ -270,7 +270,7 @@ $h6-font-size:                $font-size-base;
 $headings-margin-bottom:      ($spacer / 2);
 $headings-font-family:        inherit;
 $headings-font-weight:        700;
-$headings-line-height:        1.2;
+$headings-line-height:        $line-height-base;
 $headings-color:              inherit;
 
 $display1-size:               6rem;
@@ -278,8 +278,8 @@ $display2-size:               5.5rem;
 $display3-size:               4.5rem;
 $display4-size:               3.5rem;
 
-$display1-weight:             $font-weight-bold;
-$display2-weight:             $font-weight-normal;
+$display1-weight:             $font-weight-bolder;
+$display2-weight:             $font-weight-bold;
 $display3-weight:             $font-weight-normal;
 $display4-weight:             $font-weight-normal;
 $display-line-height:         $headings-line-height;
