--- a/public/themes/wordplate/assets/styles/app.css
+++ b/public/themes/wordplate/assets/styles/app.css
@@ -12219,7 +12219,8 @@ html input:focus {
 html .pad-anchor::before {
   content: " ";
   display: block;
-  position: absolute;
+  height: 150px;
+  width: 150px;
   margin-top: -150px;
 }
 
