--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -28,7 +28,8 @@ html {
     .pad-anchor::before {
         content: " ";
         display: block;
-        position: absolute;
+        height: 150px;
+        width: 150px;
         margin-top: -150px;
     }
 }
