--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -238,6 +238,15 @@ ul.navbar-nav {
 
 .mobile-menu.open {
     background-color: $moss;
+
+    button.nav-link {
+        text-transform: uppercase;
+        font-weight: $font-weight-bold;
+    }
+
+    .dropdown-menu {
+        background-color: $dark;
+    }
 }
 
 //Search Form
